Set Position Fixed and z-index on loader

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,6 +70,7 @@ body {
   opacity: 100%;
   font-size: 10em;
   text-shadow: 0 0 7px;
+  z-index: 9999;
 }
 .loader .loader__point {
   color: #9356DC;
